# mpmfnum-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: unit.yml
src/: lib.rs  math.rs  mpfr.rs  number.rs  ops.rs  round.rs  split.rs  util.rs
src/fixed/: mod.rs  number.rs  ops.rs  round.rs  types.rs
src/fixed_point/: mod.rs  number.rs  ops.rs  round.rs
src/float/: mod.rs  number.rs  ops.rs  round.rs
src/ieee754/: mod.rs  number.rs  ops.rs  round.rs  types.rs
src/posit/: mod.rs  number.rs  ops.rs  round.rs
src/rational/: mod.rs  number.rs  ops.rs  round.rs  types.rs
src/real/: mod.rs  ops.rs  round.rs
src/rfloat/: mod.rs  number.rs  round.rs
tests/: fixed.rs  ieee754.rs  posit.rs  quadratic.rs  rational.rs  rfloat.rs  sandbox.rs
