[package]
name = "mpmfnum"
version = "0.1.0"
edition = "2021"
authors = [ "Brett Saiki bksaiki(at)gmail.com" ]
description = "A numbers library in Rust"

homepage = "https://github.com/bksaiki/mpmfnum-rust"
readme = "README.md"
license = "MIT"

[dependencies]
gmp-mpfr-sys = "1.5"
rug = "1.19.2"
rust-gmp = "0.5.0"

[profile.release]
opt-level = 3
