[package]
name = "mpmfnum"
version = "0.1.0"
edition = "2021"
authors = [ "Brett Saiki bksaiki(at)gmail.com" ]
description = "A numbers library in Rust"

homepage = "https://github.com/bksaiki/mpmfnum-rust"
readme = "README.md"
license = "MIT"

[dependencies]
gmp-mpfr-sys = "1.5"
num-traits = "0.2.16"
rug = { version = "1.19.2", features = ["num-traits"] }

[profile.release]
opt-level = 3
