[package]
name = "mpmfnum"
version = "0.2.0"
edition = "2021"
authors = [ "Brett Saiki bksaiki(at)gmail.com" ]
description = "A numbers library in Rust"
keywords = [ "numerics", "math" ]
categories = [ "mathematics" ]

homepage = "https://github.com/bksaiki/mpmfnum-rust"
readme = "README.md"
license = "MIT"

[dependencies]
gmp-mpfr-sys = "~1.6"
num-traits = "0.2.17"
rug = { version = "1.22.0", features = [ "num-traits" ] }
